# phantom-fhe-boot

./: CMakeLists.txt  README.md  run_boot.sh  run_dnn.sh  run_resnet.sh  run_test.sh
DNN/: CMakeLists.txt  dnn_example.cu  dnn_example.h
Resnet/: CMakeLists.txt  resnet.cu  resnet.cuh
Resnet/models/: CMakeLists.txt  model_resnet20.cu  model_resnet20.cuh  weight_loader.cu  weight_loader.cuh
bootstrapping/: CMakeLists.txt  bootstrapping.h  bootstrapping_example.cu
examples/: 3_ckks.cu  5_aux_bootstrap.cu  CMakeLists.txt  example.cu
include/: bootstrap.cuh  ciphertext.h  ckks.h  context.cuh  convolution.cuh  cuda_wrapper.cuh  dnn.cuh  error_handle.cuh  evaluate.cuh  fft.h  galois.cuh  plaintext.h  polymath.cuh  secretkey.h  timer.h  uintmath.cuh  util.cuh
include/host/: common.h
src/: CMakeLists.txt  bootstrap.cu  ckks.cu  convolution.cu  dnn.cu  eval_key_switch.cu  evaluate.cu  fft.cu  galois.cu  polymath.cu  rns_bconv.cu  secretkey.cu  util.cu
